entrega previa del integrador preparacion de entorno

--- a/index.html
+++ b/index.html
@@ -65,55 +65,15 @@
 
                 </div>
             </section>
-
-            <section class="main__section section container mt-3">
-                <div class="row">
-                    <h2 class="section__titulo2 ">
-                        Ganadores de General 10 KM FEMENINO </h2>
-                    <hr class="section__hr">
+            <div id="chronoExample">
+                <div class="values">00:00:00</div>
+                <div>
+                    <button class="startButton">Start</button>
+                    <button class="pauseButton">Pause</button>
+                    <button class="stopButton">Stop</button>
+                    <button class="resetButton">Reset</button>
                 </div>
-                <div class="mt-3">
-                    <table class="tabla my-4">
-                        <thead class="tabla__thead ">
-                            <tr class="row mx-0">
-                                <th class="tabla__th col-2 ">Nro</th>
-                                <th class="tabla__th col-4">Nombre</th>
-                                <th class="tabla__th col-3">Apellido</th>
-                                <th class="tabla__th col-3 col-md-3">Premio</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="row mx-0">
-                                <td class="tabla__td col-2">1</td>
-                                <td class="tabla__td col-4">Juan Manuel</td>
-                                <td class="tabla__td col-3">Ortega</td>
-                                <td class="tabla__td col-3">
-                                    <div class="tabla__contenedorImagen">
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr class="row mx-0">
-                                <td class="tabla__td col-2">2</td>
-                                <td class="tabla__td col-4">Jacob</td>
-                                <td class="tabla__td col-3">Thornton</td>
-                                <td class="tabla__td col-3">
-                                    <div class="tabla__contenedorImagen">
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr class="row mx-0">
-                                <td class="tabla__td col-2">3</td>
-                                <td class="tabla__td col-4">Elbis</td>
-                                <td class="tabla__td col-3">Larry the Bird</td>
-                                <td class="tabla__td col-3">
-                                    <div class="tabla__contenedorImagen">
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </section>
+            </div>
         </main>
         <footer class=" footer">
             <div>
@@ -122,7 +82,8 @@
                 </div>
             </div>
         </footer>
+        <script src="lib/easytimer/dist/easytimer.min.js"></script>
+        <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
     </body>
-    <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
 
 </html>
