--- a/corredor.html
+++ b/corredor.html
@@ -63,6 +63,32 @@
                     <h1 class="section__titulo section__titulo--variante">Carga de corredor</h1>
                     <hr class="section__hr section__hr--titulo">
                 </div>
+                <!-- <form name="formCorredor" id="formCorredor" class="row g-3"> -->
+                <!-- <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
+                        <label class="form-label">Nombre de Corredor</label>
+                        <input type="text" class="form-control" autocomplete="off" id="nombre" name="nombre"
+                            placeholder="nombre" required>
+
+                    </div>
+                    <div class="col-md-6" id="categoria__rangoMinimo" name="categoria__rangoMinimo">
+                        <label class="form-label">Edad</label>
+                        <input type="number" class="form-control" autocomplete="on" id="rangoMinimo" name="rangoMinimo"
+                            placeholder="Edad minima" required>
+                    </div>
+                    <div class="col-md-6" id="categoria__rangoMaximo" name="categoria__rangoMaximo">
+                        <label class="form-label">categoria</label>
+                        <input type="number" class="form-control" autocomplete="on" id="rangoMaximo" name="rangoMaximo"
+                            placeholder="Edad maxima" required>
+
+                    </div> -->
+                <!-- <div class="col-6" id=corredor__equipo" name="corredor__equipo"> -->
+                <!-- <label class="form-label">Equipo</label> -->
+                <select class="form-select" id="equipos">
+                    <option value="">Sin Equipo</option>
+                </select>
+                <!-- </div> -->
+                <!-- <button class=" btn btn-enviar" type="submit"> Guardar Categoria</button> -->
+                <!-- </form> -->
             </section>
         </main>
         <footer class=" footer">
@@ -72,8 +98,10 @@
                 </div>
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
+        <script src="js/corredor.js"></script>
     </body>
-    <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
-    <script src="./js/corredor.js"></script>
 
 </html>
