agregado de datos al formulario de corredor

--- a/corredor.html
+++ b/corredor.html
@@ -63,32 +63,45 @@
                     <h1 class="section__titulo section__titulo--variante">Carga de corredor</h1>
                     <hr class="section__hr section__hr--titulo">
                 </div>
-                <!-- <form name="formCorredor" id="formCorredor" class="row g-3"> -->
-                <!-- <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
+                <form name="formCorredor" id="formCorredor" class="row g-3">
+                    <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
                         <label class="form-label">Nombre de Corredor</label>
                         <input type="text" class="form-control" autocomplete="off" id="nombre" name="nombre"
                             placeholder="nombre" required>
 
                     </div>
+
+                    <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
+                        <label class="form-label">EDADr</label>
+                        <input type="text" class="form-control" autocomplete="off" id="nombre" name="nombre"
+                            placeholder="nombre" required>
+
+                    </div>
+                    <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
+                        <label class="form-label">DNI</label>
+                        <input type="text" class="form-control" autocomplete="off" id="nombre" name="nombre"
+                            placeholder="nombre" required>
+
+                    </div>
                     <div class="col-md-6" id="categoria__rangoMinimo" name="categoria__rangoMinimo">
-                        <label class="form-label">Edad</label>
+                        <label class="form-label">Nro Dorsal</label>
                         <input type="number" class="form-control" autocomplete="on" id="rangoMinimo" name="rangoMinimo"
                             placeholder="Edad minima" required>
                     </div>
                     <div class="col-md-6" id="categoria__rangoMaximo" name="categoria__rangoMaximo">
-                        <label class="form-label">categoria</label>
-                        <input type="number" class="form-control" autocomplete="on" id="rangoMaximo" name="rangoMaximo"
-                            placeholder="Edad maxima" required>
-
-                    </div> -->
-                <!-- <div class="col-6" id=corredor__equipo" name="corredor__equipo"> -->
-                <!-- <label class="form-label">Equipo</label> -->
-                <select class="form-select" id="equipos">
-                    <option value="">Sin Equipo</option>
-                </select>
-                <!-- </div> -->
-                <!-- <button class=" btn btn-enviar" type="submit"> Guardar Categoria</button> -->
-                <!-- </form> -->
+                        <label class="form-label">Categoria</label>
+                        <select class="form-select" id="equipos">
+                            <option value="">Sin Equipo</option>
+                        </select>
+                    </div>
+                    <div class="col-6" id=corredor__equipo" name="corredor__equipo">
+                        <label class="form-label">Equipo</label>
+                        <select class="form-select" id="equipos">
+                            <option value="">Sin Equipo</option>
+                        </select>
+                    </div>
+                    <!-- <button class=" btn btn-enviar" type="submit"> Guardar Categoria</button> -->
+                </form>
             </section>
         </main>
         <footer class=" footer">
