--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 </div>
             </div>
         </footer>
+        <script src="lib/easytimer/dist/easytimer.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
     </body>
 
