--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
                 </div>
             </section>
             <div id="chronoExample">
-                <div class="values">00:00:00</div>
+                <div class="values" style="font-size: xx-large;">00:00:00:00</div>
                 <div>
-                    <button class="startButton">Start</button>
-                    <button class="pauseButton">Pause</button>
-                    <button class="stopButton">Stop</button>
-                    <button class="resetButton">Reset</button>
+                    <button class="startButton btn btn-success">Start</button>
+                    <button class="pauseButton btn btn-primary">Pause</button>
+                    <button class="stopButton btn btn-warning">Stop</button>
+                    <button class="resetButton btn btn-danger">Reset</button>
                 </div>
             </div>
+
         </main>
         <footer class=" footer">
             <div>
@@ -82,9 +83,9 @@
                 </div>
             </div>
         </footer>
-        <script src="lib/easytimer/dist/easytimer.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/easytimer@1.1.3/src/easytimer.min.js"></script>
+        <script src="js/index.js"></script>
         <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
     </body>
 
