--- a/equipo.html
+++ b/equipo.html
@@ -119,6 +119,7 @@
             </div>
         </footer>
     </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/952ce176af.js" crossorigin="anonymous"></script>
     <script src="./js/equipo.js"></script>
 
