puesta en punto de valores para entrega final

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </section>
             <div id="chronoExample">
-                <div class="values" style="font-size: xx-large;">00:00:00:00</div>
+                <div class="values" id="idReloj" style="font-size: xx-large;">00:00:00:00</div>
                 <div>
                     <button class="startButton btn btn-success">Start</button>
                     <button class="pauseButton btn btn-primary">Pause</button>
