agregado de validadcion de select desde funciones

--- a/equipo.html
+++ b/equipo.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col-6" id="equipo__provincia" name="equipo__provincia">
                             <label class="form-label">Provincia</label>
-                            <select class="form-select" id="provincia" name="provinciaSelect">
+                            <select class="form-select" id="provincia" name="provincia">
                                 <option value="">Provincia</option>
                             </select>
                             <strong class="error__formulario">
@@ -82,14 +82,13 @@
                         </div>
                         <div class="col-md-6" id="equipo__localidad" name="equipo__localidad">
                             <label class="form-label">Localidad</label>
-                            <select class="form-select" id="localidad" name="localidadSelect">
+                            <select class="form-select" id="localidad" name="localidad">
                                 <option value="">Localidad</option>
                             </select>
                             <strong class="error__formulario">
                                 Se debe agregar una localidad valida
                             </strong>
                         </div>
-
 
                         <button class=" btn btn-enviar" type="submit"> Guardar Equipo</button>
                     </form>
