funcionalidades de equipos implementar la funcionalidad para acceder a los datos desde corredor

--- a/corredor.html
+++ b/corredor.html
@@ -71,27 +71,27 @@
 
                     </div>
 
-                    <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
-                        <label class="form-label">EDADr</label>
-                        <input type="text" class="form-control" autocomplete="off" id="nombre" name="nombre"
-                            placeholder="nombre" required>
+                    <div class="col-md-6" id="categoria__edad" name="categoria__nombre">
+                        <label class="form-label">EDAD</label>
+                        <input type="text" class="form-control" autocomplete="off" id="edad" name="edad"
+                            placeholder="edad Corredor" required>
 
                     </div>
-                    <div class="col-md-6" id="categoria__nombre" name="categoria__nombre">
+                    <div class="col-md-6" id="categoria__dni" name="categoria__dni">
                         <label class="form-label">DNI</label>
-                        <input type="text" class="form-control" autocomplete="off" id="nombre" name="nombre"
+                        <input type="text" class="form-control" autocomplete="off" id="dni" name="dni"
                             placeholder="nombre" required>
 
                     </div>
-                    <div class="col-md-6" id="categoria__rangoMinimo" name="categoria__rangoMinimo">
+                    <div class="col-md-6" id="categoria__dorsal" name="categoria__rangoMinimo">
                         <label class="form-label">Nro Dorsal</label>
-                        <input type="number" class="form-control" autocomplete="on" id="rangoMinimo" name="rangoMinimo"
-                            placeholder="Edad minima" required>
+                        <input type="number" class="form-control" autocomplete="on" id="dorsal" name="dorsal"
+                            placeholder="Nro dorsal" required>
                     </div>
-                    <div class="col-md-6" id="categoria__rangoMaximo" name="categoria__rangoMaximo">
+                    <div class="col-md-6" id="corredor__categoria" name="corredor__categoria">
                         <label class="form-label">Categoria</label>
-                        <select class="form-select" id="equipos">
-                            <option value="">Sin Equipo</option>
+                        <select class="form-select" id="categoria">
+                            <option value="">Categoria</option>
                         </select>
                     </div>
                     <div class="col-6" id=corredor__equipo" name="corredor__equipo">
@@ -100,7 +100,7 @@
                             <option value="">Sin Equipo</option>
                         </select>
                     </div>
-                    <!-- <button class=" btn btn-enviar" type="submit"> Guardar Categoria</button> -->
+                    <button class=" btn btn-enviar" type="submit"> Guardar Categoria</button>
                 </form>
             </section>
         </main>
