--- a/equipo.html
+++ b/equipo.html
@@ -17,10 +17,6 @@
 
         <!-- LINKS PROPIOS -->
         <link rel="stylesheet" href="./css/style.css">
-
-        <!-- KEYWORKS AND DESCRIPTION -->
-        <meta name="keywords" content="">
-        <meta name="description" content="">
     </head>
 
     <body>
@@ -71,7 +67,7 @@
                                 Se debe agregar un nombre valido
                             </strong>
                         </div>
-                        <div class="col-6" id="equipo__provincia" name="equipo__provincia">
+                        <div class="col-md-6" id="equipo__provincia" name="equipo__provincia">
                             <label class="form-label">Provincia</label>
                             <select class="form-select" id="provincia" name="provincia">
                                 <option value="">Provincia</option>
@@ -83,7 +79,7 @@
                         <div class="col-md-6" id="equipo__localidad" name="equipo__localidad">
                             <label class="form-label">Localidad</label>
                             <select class="form-select" id="localidad" name="localidad">
-                                <option value="">Localidad</option>
+                                <option value="" selected>Localidad</option>
                             </select>
                             <strong class="error__formulario">
                                 Se debe agregar una localidad valida
@@ -113,7 +109,7 @@
             </section>
 
         </main>
-        <footer class=" footer">
+        <footer class="footer">
             <div>
                 <div class="footer__autor">
                     Copyrigh © By Carlos Anibal Tejada
