--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             <div id="chronoExample">
                 <div class="values col-md-12 my-3"
                     style="font-size: xx-large; border:1px solid #000;display: flex;align-items: center; align-content: center;">
-                    <div>00:00:00:00</div>
+                    <div id="reloj">
+                        00:00:00:00
+                    </div>
                 </div>
                 <div class="row">
                     <button class="startButton btn btn-success col-2 me-1">Iniciar</button>
